// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.data;

import "google/protobuf/wrappers.proto";



message Storable {
  repeated google.protobuf.StringValue tenant_ids = 1;
  google.protobuf.StringValue natural_key = 2;
  google.protobuf.StringValue type_name = 3;
  google.protobuf.StringValue display_type_name = 4;
}

message PageToken {
  si.data.Query query = 1;
  google.protobuf.Int32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  PageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue item_id = 5;
  google.protobuf.StringValue contained_within = 6;
}

message Query {
  QueryBooleanTerm boolean_term = 1;
  google.protobuf.BoolValue is_not = 2;
  repeated QueryItems items = 3;
}

enum PageTokenOrderByDirection {
  PAGE_TOKEN_ORDER_BY_DIRECTION_UNKNOWN = 0;
  PAGE_TOKEN_ORDER_BY_DIRECTION_ASC = 1;
  PAGE_TOKEN_ORDER_BY_DIRECTION_DESC = 2;
}

enum QueryBooleanTerm {
  QUERY_BOOLEAN_TERM_UNKNOWN = 0;
  QUERY_BOOLEAN_TERM_AND = 1;
  QUERY_BOOLEAN_TERM_OR = 2;
}

message QueryItems {
  si.data.Query query = 1001;
  QueryItemsExpression expression = 1;
}

message QueryItemsExpression {
  google.protobuf.StringValue field = 1;
  google.protobuf.StringValue value = 2;
  QueryItemsExpressionComparison comparison = 3;
  QueryItemsExpressionFieldType field_type = 4;
}

enum QueryItemsExpressionComparison {
  QUERY_ITEMS_EXPRESSION_COMPARISON_UNKNOWN = 0;
  QUERY_ITEMS_EXPRESSION_COMPARISON_EQUALS = 1;
  QUERY_ITEMS_EXPRESSION_COMPARISON_NOT_EQUALS = 2;
  QUERY_ITEMS_EXPRESSION_COMPARISON_CONTAINS = 3;
  QUERY_ITEMS_EXPRESSION_COMPARISON_LIKE = 4;
  QUERY_ITEMS_EXPRESSION_COMPARISON_NOT_LIKE = 5;
}

enum QueryItemsExpressionFieldType {
  QUERY_ITEMS_EXPRESSION_FIELD_TYPE_UNKNOWN = 0;
  QUERY_ITEMS_EXPRESSION_FIELD_TYPE_STRING = 1;
  QUERY_ITEMS_EXPRESSION_FIELD_TYPE_INT = 2;
}
